fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/Lab_Evaluations__c.object-meta.xml
<CustomObject>
    <label>Lab Evaluations</label>
    <nameField>
        <label>Lab Evaluations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>