fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Arrow_EZ_IO_System_Use__c.field-meta.xml
<CustomField>
    <fullName>Arrow_EZ_IO_System_Use__c</fullName>
    <label>Arrow EZ-IO System Use?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>