fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>