fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Bag_Valve_Mask_Ventilation__c.field-meta.xml
<CustomField>
    <fullName>Bag_Valve_Mask_Ventilation__c</fullName>
    <label>Bag Valve Mask Ventilation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>