fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Can_use_EZ_IO_Without_Approval__c.field-meta.xml
<CustomField>
    <fullName>Can_use_EZ_IO_Without_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can use EZ-IO Without Approval?</label>
    <type>Checkbox</type>
</CustomField>