fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Can_Use_OnControl_Without_Approval__c.field-meta.xml
<CustomField>
    <fullName>Can_Use_OnControl_Without_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Use OnControl Without Approval?</label>
    <type>Checkbox</type>
</CustomField>