fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>Create_Lead__c</fullName>
    <formula>OR(
 NOT(ISBLANK( Follow_up_Email__c)),
 NOT(ISBLANK( Follow_up_Name__c)),
 NOT(ISBLANK( Follow_up_Phone__c )),
 NOT(ISBLANK(  Do_You_Need_Additional_Support__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Lead</label>
    <type>Checkbox</type>
</CustomField>