fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Do_You_Need_Additional_Support__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Need_Additional_Support__c</fullName>
    <label>Do You Need Additional Support?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>