fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Endotracheal_Tube_Insertion__c.field-meta.xml
<CustomField>
    <fullName>Endotracheal_Tube_Insertion__c</fullName>
    <label>Endotracheal Tube Insertion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>