fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Femur_Placement_Pediatrics__c.field-meta.xml
<CustomField>
    <fullName>Femur_Placement_Pediatrics__c</fullName>
    <label>Femur Placement (Pediatrics)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>