fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Follow_up_Email__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Email__c</fullName>
    <label>Follow-up Email</label>
    <type>Email</type>
</CustomField>