fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Follow_up_Phone__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Phone__c</fullName>
    <label>Follow-up Phone</label>
    <type>Phone</type>
</CustomField>