fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Hospital_Agency__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Agency__c</fullName>
    <formula>Lab_Participant__r.Hospital_Agency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital/Agency</label>
    <type>Text</type>
</CustomField>