fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/How_could_we_improve_this_course__c.field-meta.xml
<CustomField>
    <fullName>How_could_we_improve_this_course__c</fullName>
    <label>How could we improve this course?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>