fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/How_likely_will_use_with_Next_Patient__c.field-meta.xml
<CustomField>
    <fullName>How_likely_will_use_with_Next_Patient__c</fullName>
    <label>How likely will use with Next Patient?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>