fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Humeral_Placement__c.field-meta.xml
<CustomField>
    <fullName>Humeral_Placement__c</fullName>
    <label>Humeral Placement?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>