fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>Lab Evaluations</relationshipLabel>
    <relationshipName>Lab_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>