fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Lab_ID__c.field-meta.xml
<CustomField>
    <fullName>Lab_ID__c</fullName>
    <formula>Lab__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab ID</label>
    <type>Text</type>
</CustomField>