fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Lab_Name__c.field-meta.xml
<CustomField>
    <fullName>Lab_Name__c</fullName>
    <label>Lab Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>