fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Lab_Participant_Browserr__c.field-meta.xml
<CustomField>
    <fullName>Lab_Participant_Browserr__c</fullName>
    <label>Lab Participant Browserr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>