fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Lab_Participant_IP__c.field-meta.xml
<CustomField>
    <fullName>Lab_Participant_IP__c</fullName>
    <label>Lab Participant IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>