fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Lab_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Lab_Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lab Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>