fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>Arrow_EZ_IO_System_Use__c +
Insertion_Site_Identification__c + 
Humeral_Placement__c +  
VALUE(How_likely_will_use_with_Next_Patient__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>