fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Level_of_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Responsibility__c</fullName>
    <label>Level of Responsibility</label>
    <type>TextArea</type>
</CustomField>