fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/LMA_Insertion__c.field-meta.xml
<CustomField>
    <fullName>LMA_Insertion__c</fullName>
    <label>LMA Insertion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>