fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Matrix_Arrow_EZ_IO_System_Use__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Arrow_EZ_IO_System_Use__c</fullName>
    <label>Arrow EZ-IO System Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>