fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Matrix_Empowered_to_Change__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Empowered_to_Change__c</fullName>
    <label>Empowered to Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>