fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Matrix_Femer_Placement_Pediatrics__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Femer_Placement_Pediatrics__c</fullName>
    <label>Femer Placement (Pediatrics)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>