fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Matrix_Insertion_Site_Landmarking__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Insertion_Site_Landmarking__c</fullName>
    <label>Insertion Site Landmarking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>