fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Matrix_Likelihood_of_using_EZIO__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Likelihood_of_using_EZIO__c</fullName>
    <label>Likelihood of using EZIO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>