fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Matrix_Use_in_Emergent_Situations__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Use_in_Emergent_Situations__c</fullName>
    <label>Use in Emergent Situations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>