fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Matrix_Use_in_Patients_Conscious_to_Pain__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Use_in_Patients_Conscious_to_Pain__c</fullName>
    <label>Use in Patients Conscious to Pain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>