fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Needle_Selection_Patient_Variables__c.field-meta.xml
<CustomField>
    <fullName>Needle_Selection_Patient_Variables__c</fullName>
    <label>Needle Selection/Patient Variables</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>