fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/OnControl_Powered_Bone_Access_System__c.field-meta.xml
<CustomField>
    <fullName>OnControl_Powered_Bone_Access_System__c</fullName>
    <label>OnControl Powered Bone Access System</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>