fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Oral_and_Nasopharyngeal_Airway_Adjuncts__c.field-meta.xml
<CustomField>
    <fullName>Oral_and_Nasopharyngeal_Airway_Adjuncts__c</fullName>
    <label>Oral and Nasopharyngeal Airway Adjuncts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>