fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Others_Would_Benefit_From_Learning_More__c.field-meta.xml
<CustomField>
    <fullName>Others_Would_Benefit_From_Learning_More__c</fullName>
    <label>Others Would Benefit From Learning More?</label>
    <type>TextArea</type>
</CustomField>