fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Positive_End_Expiratory_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Positive_End_Expiratory_Pressure__c</fullName>
    <label>Positive End Expiratory Pressure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>