fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Systematic_Airway_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Systematic_Airway_Assessment__c</fullName>
    <label>Systematic Airway Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>