fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Understanding_of_Kit_Contents__c.field-meta.xml
<CustomField>
    <fullName>Understanding_of_Kit_Contents__c</fullName>
    <label>Understanding of Kit Contents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>