fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/Use_in_Awake_Patients__c.field-meta.xml
<CustomField>
    <fullName>Use_in_Awake_Patients__c</fullName>
    <label>Use in Awake Patients?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>