fullSandbox11072023/force-app/main/default/objects/Lab_Evaluations__c/fields/What_was_most_beneficial_at_lab__c.field-meta.xml
<CustomField>
    <fullName>What_was_most_beneficial_at_lab__c</fullName>
    <label>What was most beneficial at lab?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PowerPoint Presentation</fullName>
            </value>
            <value>
                <fullName>Egg Station</fullName>
            </value>
            <value>
                <fullName>Airway Station</fullName>
            </value>
            <value>
                <fullName>Cadaver Station</fullName>
            </value>
            <value>
                <fullName>Simulation Station</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>